Fix view brand on iphone 5

--- a/css/style.css
+++ b/css/style.css
@@ -1304,6 +1304,9 @@ left: 15px;
   .embed-banner {
     height: 230px;
   }
+  .smart-tmip {
+    height: 265px;
+  }
   .blog-item-title h3 {
     font-size: 20px;
   }
